:sparkles: feat: 문제 29 재풀이 실패 - 문제 이해 부족